<resources>
    <string name="app_name">FoodDelivery</string>

    <!-- Login Strings -->
    <string name="welcome">Welcome</string>
    <string name="enter_account">Please enter your account here</string>
    <string name="dont_have" translatable="false">Don\'t have any account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Register Strings -->
    <string name="name">Name</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="register">Register</string>
    <string name="create_a_account">Create a account</string>

    <!-- Home Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileimage">profileImage</string>
    <string name="search">Search</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurantsimage">restaurantsImage</string>
    <string name="categorieimage">categorieImage</string>

    <!-- Navbar Strings -->
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>

    <!-- Restaurant Strings -->
    <string name="delivery_info">Delivery Info</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="minimum_delivery_fee">Minimum Delivery Fee</string>
    <string name="payment">Payment</string>
    <string name="restaurant_name">Restaurant Name</string>


    <!-- Meal Strings -->
    <string name="mealimage">mealImage</string>
    <string name="please_select_the_materials_you_want_to_extract">Please select the materials you want to extract</string>
    <string name="materials">Materials</string>
    <string name="piece">Piece</string>
    <string name="minusorder">minusOrder</string>
    <string name="plus">plus</string>
    <string name="order_now">Order Now</string>
    <string name="_1">1</string>

    <!-- Profile Strings -->
    <string name="logout">Log Out</string>
    <string name="update_profile">Update Profile</string>
    <string name="last_orders">Last Orders</string>

    <!-- Onboarding Strings -->
    <string name="set_your_delivery_adress">Set your delivery address</string>
    <string name="choose_your_meal">Choose your meal</string>
    <string name="receive_your_order">Receive your order</string>
    <string name="firsonboardingimage">firsOnboardingImage</string>
    <string name="secononboardingimage">seconOnboardingImage</string>
    <string name="thirdonboardingimage">thirdOnboardingImage</string>

    <!-- Ordercard Strings -->
    <string name="confirm_order">Confirm Order</string>

    <!-- Restaurant Add Strings -->
    <string name="add_restaurant">Add Restaurant</string>
    <string name="restaurant_image_url">Restaurant Image Url</string>
    <string name="restaurant_min_delivery_fee">Restaurant Min Delivery Fee</string>
    <string name="restaurant_district">Restaurant District</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_delivery_time">Restaurant Delivery Time</string>
    <string name="restaurant_delivery_info">Restaurant Delivery Info</string>


    <!-- Meal Add Strings -->
    <string name="meal_name">Meal Name</string>
    <string name="meal_image_url">Meal Image Url</string>
    <string name="meal_description">Meal Description</string>
    <string name="meal_price">Meal Price</string>
    <string name="meal_ingredients">Meal Ingredients</string>
    <string name="add_meal">Add Meal</string>

    <!-- Update User Strings -->
    <string name="user_email">User Email</string>
    <string name="user_name">User Name</string>
    <string name="user_place">User Place</string>
    <string name="user_phone">User Phone</string>
    <string name="user_imageurl">User ImageUrl</string>
    <string name="update">Update</string>



    <string-array name="RestaurantPaymentMethods">
        <item>Online Credit/Bank Card</item>
        <item>Credit Card</item>
        <item>Cash</item>
        <item>Ticket Restaurant</item>
        <item>Sodexo Restaurant Pass</item>
        <item>Multinet</item>
        <item>SetCard</item>
    </string-array>

    <string-array name="cuisines">
        <item>Seafood</item>
        <item>Burger</item>
        <item>Doner</item>
        <item>Worldwide</item>
        <item>Homemade</item>
        <item>Breakfast</item>
        <item>Kebab</item>
        <item>Meatball</item>
        <item>Pasta - Salad</item>
        <item>Bakery</item>
        <item>Pizza</item>
        <item>Dessert</item>
        <item>Eastern Kitchen</item>
    </string-array>


</resources>