<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.home.AddWordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_profile"
                android:textSize="25sp"
                android:layout_margin="16dp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/userEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="true"
                android:background="@drawable/login_custom_input"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="16dp"
                android:autofillHints="true"
                android:background="@drawable/login_custom_input"
                android:hint="@string/user_name"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/userPlaceEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="true"
                android:background="@drawable/login_custom_input"
                android:hint="@string/user_place"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/userPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="true"
                android:layout_marginVertical="16dp"
                android:background="@drawable/login_custom_input"
                android:hint="@string/user_phone"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/userImageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="true"
                android:background="@drawable/login_custom_input"
                android:hint="@string/user_imageurl"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@drawable/login_custom_button"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="16dp"
                android:text="@string/update" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>