<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/homeSearchLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/homeProfilePhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/profileimage"
            android:src="@drawable/ic_home_profile"
            app:shapeAppearanceOverlay="@style/CircularImageView" />

        <EditText
            android:id="@+id/homeSearchEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:autofillHints="true"
            android:background="@drawable/login_custom_input"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:hint="@string/search"
            android:padding="16dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/popular_categories"
        android:layout_marginVertical="16dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeCategoriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/homeRestaurantTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/restaurants"
        android:textSize="24sp"
        android:layout_marginVertical="16dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRestaurantRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>