<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.home.AddWordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_meal"
                android:textSize="25sp"
                android:layout_margin="16dp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/mealNameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="true"
                android:background="@drawable/login_custom_input"
                android:hint="@string/meal_name"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/mealImageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="16dp"
                android:autofillHints="true"
                android:background="@drawable/login_custom_input"
                android:hint="@string/meal_image_url"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/mealDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="true"
                android:background="@drawable/login_custom_input"
                android:hint="@string/meal_description"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/mealPriceEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="true"
                android:layout_marginVertical="16dp"
                android:background="@drawable/login_custom_input"
                android:hint="@string/meal_price"
                android:inputType="numberDecimal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ingredientsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:autofillHints="true"
                    android:background="@drawable/login_custom_input"
                    android:hint="@string/meal_ingredients"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />

                <ImageButton
                    android:id="@+id/addIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_plus"
                    android:background="@drawable/login_custom_button"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="5" />

            </LinearLayout>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addMealButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_custom_button"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="16dp"
                android:text="@string/add_meal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>